# rust-webserver

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: build.yaml
.sqlx/: query-0035e1e35db1c12cd88a4cabf40f4b72faea15b92851842441aea6c0d63dfa34.json  query-08afe1d731750539c9bb00771c20131f100ea37c45c84322e278e12d60b5f412.json  query-09f6f4618467f154ae307e891073b2279197d53ec95fe40cf93d57cbc378905f.json  query-0e649f20cf8b8ec36dd1187439ed1f92e3d1a8ea4094bce00339ff5b148a177d.json  query-0eb6b0513110e5ea0eaa48a92a1f17b0e6cfcebcd6d685ce8318fa9f473ca34f.json  query-10802643051d52146794596eb0fc7b7816f47fb269331bdb5b8dcfa04a1ad52e.json  query-10e5f33fe9020b63e8904ed6d4809a456b781e9d5b63bdb9e8c66fbfede45c49.json  query-13a5bd8f345c38cdf7f2ca8724f3be9dc90708068d5ac4a203ae9f6a0c9a8efb.json  query-154fe4e7cfbdfa242b32009c28a333373dbe87d10bb33e5ba6a46d864b2409f9.json  query-1be2dad7ec99bbd8d6f6b0fdcec452254da1549ad1be91f74f82aabe79a18e6f.json  query-23049396377e90ddb121ae56b9b71429405acbc97cc5d4b5ac4af2186f1d625e.json  query-23816ca2b5a700b9ad44e0470309b542d15aff3fba46e16ab963c589d8eb4aea.json  query-291603cdca12544011e13ad1c7a306b959e6541171729ead1d27dd8a65bfecf2.json  query-292eb20ff4be95e7ce926ed05e026fd8290cbac89cf8488be603780c543ff698.json  query-29e65ffcd6897f0b85e29e373e56d16a6727414a12a51fb3325fcd5f3708e56c.json  query-2a60a9d16ca00617c8a46ef267dead300d52b67344beb94c4b8434001d934c8d.json  query-2e8a0a8263b1655253780f8e513f48098d9e6303443b34d08f1defb43453961c.json  query-32b49dac5f5401df2e32d873301854d3d25e60a8140d8e5f21c30c8d7bf46015.json  query-360848420bf31f3ea9034d1625e0f6c7dadd588323c26637a74ec73fff73c650.json  query-36feeec51ec002219a80ad22bc60361c7df91925efcd50c1227b1e59cc6440a6.json  query-44afbad7a494b9bad11c5d5838b3ed3179a55c8ea5a7398ecd7140e62b41dbff.json  query-4524b38e7be9226f83d13cb1eaa679a9e3f092e1b283f44277dcf41d865c57e0.json  query-45c61c723aea47b40d1daa6f3ef927f973b60259b5f5d1413f715af48257c5da.json  query-467aa38fe8d8662af6bcb51d2a71a5bff3c0e5dc70d0049748454ab38752a42a.json  query-4acdb96cf2c8a7cc327ecd7e8b1bb0f7d0c40a82c4c4f4061ba77839c6e8c74a.json  query-4dd4420d16affa2a0d9f1d514c87b0241ff9372c7f4d6c3c0f12091125e6bfae.json  query-4de576237fc59e3e1a20fd0ff6625a132463f5c2e6b80c4dc7c9a698058894dd.json  query-4f19a1098de1bf393af0bdc4d39938d3926aa066571e097c51384d85e69f25b4.json  query-54c575cd438bdc5ece8bbfd719cf3ab01b58d90329a4f509895f6b7901ab7508.json  query-57e56d940c0349521821c40bff7bad987bbf4c4729a3aa7703b939f3c60aeee6.json  query-5f10d33df9533db4b95c3397119faaa29ac9f07df7a26d64d0fa57a04c04b826.json  query-62b6683bbe41265db22d50dcd0c10543df8ec3d83540ce447a0aeab0a5309731.json  query-63567427a581021e1c7a06d03f0e962eeafac91f6edebbad14a8b1fc1584037a.json  query-63e3fbe323b12860540356ca7512b1da95fc75eeeacf8852a4d2fc222a77e335.json  query-64c1d3aa841d612f686d370d880c20f54bf0011b4277eaa877766b99cd7b4486.json  query-67ff9381d6ad60c17656d638ffdd778339d203436e859faa9beaa4e336d802fd.json  query-6da50ecd118b28d71774df702603dfdd085f7cb56c93ae6b122ff9243a97d116.json  query-70494e61ff90a5811f8d8a53dc69f0d9c4a0fb1338cd47e151d1cb9997d3addd.json  query-7540f783ee2d5ed8cba89a32cf8113b6f86de77e53e3fb747efbab769f195b9c.json  query-79e5f08c6e6d95d0a2092ce158cf7a6c540b7506fc7178a1e0b515f40081eb80.json  (+43 more)
data/: README.md
data/keys/: README.md
data/nginx/: nginx_template.conf
data/nginx/templates/: nginx.conf.template
data/scripts/: renew-certificates.sh  test-certificates.sh
keys/: README.md  private.key.example  public.key.example
migrations/: 100_sample_data.sql  10_upload.sql  10_user_read_message.sql  1_setup.sql  20_artist.sql  21_album.sql  22_artist_album.sql  23_track.sql  24_album_track.sql  25_artist_track.sql  2_upload.sql  2_user.sql  3_user.sql  3_user_session.sql  4_chat.sql  4_user_profile.sql  4_user_session.sql  5_chat_user.sql  5_user_subscribe_user.sql  6_chat.sql  6_message.sql  6_user_block_user.sql  7_chat.sql  8_chat_user.sql  9_message.sql  9_user_read_message.sql
scripts/: README.md  certificates-get.sh  certificates-test.sh  copy-env.sh  docker-run-api.sh  docker-run-no-api.sh  docker-stop.sh  download-regexes.sh  get-certificates.sh  nginx-start.sh  nginx-stop.sh
src/: endpoints.rs  http.rs  lib.rs  logic.rs  main.rs  models.rs  utils.rs
src/endpoints/: auth.rs  chats.rs  me.rs  messages.rs  sessions.rs  test.rs  users.rs
src/http/: auth_user.rs  context.rs  device_info.rs  error.rs  extractors.rs  mod.rs  routers.rs  timestampz.rs
src/http/extractors/: auth_user.rs  device_info.rs  (+3 more)
src/logic/: auth.rs  health.rs
src/models/: chat_model.rs  database_models.rs  http_models.rs  message_model.rs  mod.rs  session_model.rs  timestamptz.rs  timestampz.rs  user_model.rs
src/services/: auth_service.rs  chat_service.rs  mod.rs  user_service.rs
src/utils/: device_info.rs  email.rs  error.rs  ip_info.rs  keys.rs  password.rs  request_info.rs  tokens.rs  user_agent.rs
static/: README.md
uploads/: README.md
(+65 files in other folders)
