[package]
name = "webserver"
version = "0.0.1"
edition = "2021"
authors = ["Efima"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Efimish/rust-webserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database clients.
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time", "uuid"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

# [de]serialization and validation
serde = { version = "1.0.193", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }

# requests (to use third party apis)
reqwest = { version = "0.11.22", features = ["json"] }

# hash passwords
argon2 = "0.5.2"

# additional types: Time, UUID
time = { version = "0.3.30", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Crypto keys, JWTs
rsa = { version = "0.9.4", features = ["std", "pem"] }
jsonwebtoken = "9.1.0"

# User agent parser
woothee = "0.13.0"

# Axum builds on the types in Tower
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }

# Utility Crates
dotenv = "0.15.0"
rand = "0.8.5"
thiserror = "1.0.50"
anyhow = "1.0.75"
async-trait = "0.1.74"
regex = "1.10.2"
log = "0.4.20"
env_logger = "0.10.1"
lazy_static = "1.4.0"