[package]
name = "webserver"
version = "0.0.1"
authors = ["Efima"]
edition = "2021"
rust-version = "1.73"
description = "A simple http webserver"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Efimish/rust-webserver"
keywords = ["webserver", "http"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database clients.
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.4", features = ["multipart"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time", "uuid"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

# [de]serialization and validation
serde = { version = "1.0.196", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }

# requests (to use third party apis)
reqwest = { version = "0.11.23", features = ["json"] }

# hash passwords
argon2 = "0.5.3"

# additional types: Time, UUID
time = { version = "0.3.31", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# Crypto keys, JWTs
rsa = { version = "0.9.6", features = ["std", "pem"] }
jsonwebtoken = "9.2.0"

# User agent parser
woothee = "0.13.0"

# Axum builds on the types in Tower
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }

# Utility Crates
dotenv = "0.15.0"
rand = "0.8.5"
thiserror = "1.0.56"
anyhow = "1.0.79"
async-trait = "0.1.77"
regex = "1.10.3"
log = "0.4.20"
env_logger = "0.11.1"
lazy_static = "1.4.0"
tokio-util = "0.7.10"
image = { version = "0.24.8", features = ["webp-encoder"] }
openssl = { version = "0.10.60", features = ["vendored"] }