[package]
name = "webserver"
version = "0.0.1"
authors = ["Efima"]
edition = "2021"
description = "A simple http webserver"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Efimish/rust-webserver"
keywords = ["webserver", "http"]
categories = ["web-programming"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database clients.
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["multipart"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "time", "uuid"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

# [de]serialization and validation
serde = { version = "1.0.202", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }

# http requests
reqwest = { version = "0.12.4", features = ["json"] }

# passwords hashing
argon2 = "0.5.3"

# additional types: Time, UUID
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# RSA crypto keys, JsonWebTokens
rsa = { version = "0.9.6", features = ["std", "pem"] }
jsonwebtoken = "9.3.0"

# User agent parser
uaparser = "0.6.3"

# Axum builds on the types in Tower
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }

# Utility Crates
dotenvy = "0.15.7"
rand = "0.8.5"
thiserror = "1.0.61"
anyhow = "1.0.85"
async-trait = "0.1.80"
regex = "1.10.4"
log = "0.4.21"
env_logger = "0.11.3"
once_cell = "1.19.0"
tokio-util = "0.7.11"
image = "0.25.1"
lettre = "0.11.7"